refact: changed img url

--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -29,8 +29,7 @@
 }
 .discover-photo {
 	margin: 0rem 1rem 1.5rem 1rem;
-	background: linear-gradient(#00000030, transparent),
-		url("https://i.postimg.cc/sfT8mncv/blue.jpg");
+	background: linear-gradient(#00000030, transparent), url("./assets/blue.jpg");
 	background-position: top;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -47,7 +46,7 @@
 .discover-edit {
 	margin: 0rem 1rem 2rem 1rem;
 	background: linear-gradient(#00000030, transparent),
-		url("https://i.postimg.cc/15TdhfbS/orange.jpg");
+		url("./assets/orange.jpg");
 	background-position: left;
 	background-repeat: no-repeat;
 	background-size: cover;
