fix: grid rows changed

--- a/src/Components/VideoPages/Explore/explore.css
+++ b/src/Components/VideoPages/Explore/explore.css
@@ -55,6 +55,9 @@
 	flex-grow: 9;
 	padding: 2rem;
 }
+.video-card-container-alt {
+	grid-template-rows: repeat(3, 1fr);
+}
 .loader-container {
 	color: var(--primary);
 	display: flex;
