--- a/src/Components/Auth/styles.css
+++ b/src/Components/Auth/styles.css
@@ -135,7 +135,9 @@
 }
 
 .form-submit-cta {
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	cursor: pointer;
 	padding: 1.75rem;
@@ -147,6 +149,10 @@
 	font-size: 2rem;
 	font-weight: 600;
 	letter-spacing: 0.1rem;
+}
+.form-submit-cta div {
+	border: 4px solid rgba(255, 255, 255, 0.322);
+	border-right-color: white;
 }
 .hide-cta {
 	font-size: 2rem;
